# AetherEncoder

./: ChangeLog.md  README.md  sample.json  sample2.json  sample_bkp.json
sample/: ytb.json
src/: AetherEncoder  AetherEncoder.cpp  AetherEncoder.h  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/gstreamer/: CMakeLists.txt  gst.cpp  gst.h  gst1.cpp_bkp  record.cpp
src/json/: jsonParser.cpp  jsonParser.h
test/gstreamer/: gstIpc.cpp  gstPipeline.txt  readme.md
test/gstreamer/gst_Ipc/: gstIpc.cpp
test/gstreamer/gst_record/: dynamic-recording.c
test/gstreamer/gstappSrcSink/: gstappSrcSink.cpp  gstappSrcSink1 (copy).cpp  gstappSrcSink1.cpp  gstappSrcSink2.cpp
test/gstreamer/hello_gst/: CMakeLists.txt
test/json/: Makefile  jsoncpp_demo.cpp  sample.json
